fixed some overflow errors

--- a/public/modules/RoomModule/containers/Poll/styles.css
+++ b/public/modules/RoomModule/containers/Poll/styles.css
@@ -13,10 +13,11 @@
 
 .topicResponseTitle {
     margin-bottom: 5px;
+    font-size: 20px;
 }
 
 .userOption {
-    font-size: 20px;
+    font-size: 15px;
     margin-bottom: 5px;
 }
 
