--- a/public/static/style.css
+++ b/public/static/style.css
@@ -181,10 +181,11 @@
 
 .styles__topicResponseTitle___2Qzpu {
     margin-bottom: 5px;
+    font-size: 20px;
 }
 
 .styles__userOption___h8sPh {
-    font-size: 20px;
+    font-size: 15px;
     margin-bottom: 5px;
 }
 
